third_party/move/move-compiler-v2/tests/checking/positional_fields/variant_decl_invalid.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking/positional_fields/variant_decl_invalid.move:4:3
  │
4 │         Variant1()
  │         ^^^^^^^^
  │         │
  │         Unexpected 'Variant1'
  │         Expected ','
