third_party/move/move-compiler-v2/tests/checking/positional_fields/variant_decl_invalid.move
module 0x42::test {
	enum E {
		Variant0(u8, bool)
		Variant1()
	}
}
